--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "react": "^17.0.2",
     "reload": "^3.2.0"
   },
   "devDependencies": {
